--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">   
+        <link rel="icon" href="/images/favicon.ico" type="image/x-icon">   
     </head>
     <body>
 
