remove single pages because youtube embeds SUCK

--- a/layouts/_shortcodes/ytEmbed.html
+++ b/layouts/_shortcodes/ytEmbed.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="{{.Get `url`}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="100vw" height="450" src="{{.Get `url`}}" title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
