--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ iframe {
     border: 3px solid gray;
     border-radius: 20px;
     background-color: purple;
-    max-width: 70vw;
+    /* max-width: 70vw; */
     position: relative;
 }
 
